# dfmodules

./: CMakeLists.txt
core_pinning/: ORIGINAL_cpupin-snbwriter.json  README.md  balancer.py  cpupin-snbwriter.json  cpupin-snbwriter_v2.json
include/dfmodules/: AsyncIO.hpp  SNBHandler.hpp
plugins/: :q  DEVEL_SNBWriter.cpp  DEVEL_SNBWriter.hpp  FragmentReceiver.cpp  ORGINAL_SNBWriter.cpp  RequestGenerator.cpp  SNBWriter.cpp  SNBWriter.hpp  SNBWriter_210130.cpp  SNBWriter_210130.hpp  SNBWriter_WORKS_210129.cpp  SNBWriter_WORKS_210129.hpp  SNBWriter_backup_with_all_changes_210128.cpp
schema/: dfmodules-HDF5DataStore-schema.jsonnet  dfmodules-SNBWriter-schema.jsonnet  fake-minidaq-app.jsonnet
src/: AsyncIO.cpp  SNBHandler.cpp
